# mx-sdk-rust-contract-builder

./: .gitignore  Dockerfile  README.md  build_with_docker.py  build_within_docker.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  publish.yml  reproduce-previous-builds.yml  run_long_integration_tests.yml  run_regular_integration_tests.yml  test_previous_builds_are_reproducible.yml  tests.yml
build_contract_rust/: __init__.py  artifacts_accumulator.py  build_outcome.py  builder.py  builder_test.py  cargo_lock.py  cargo_toml.py  codehash.py  constants.py  filesystem.py  main.py  packaged_source_code.py  source_code.py  wabt.py
integration_tests/: config.py  docker.py  previous_builds.py  project_folder_and_packaged_src_are_equivalent.py  reproduce_previous_builds.py  shared.py  test_basic.py  test_previous_builds_are_reproducible.py  test_project_folder_and_packaged_src_are_equivalent.py
multiversx_sdk_rust_contract_builder/: __init__.py  build_metadata.py  build_options.py  build_outcome.py  builder.py  builder_test.py  cargo_toml.py  constants.py  errors.py  filesystem.py  main.py  main_test.py  packaged_source_code.py  packaged_source_code_entry.py  packaged_source_code_test.py  source_code.py  source_code_file.py
support/: .gitignore  link_contracts_to_releases.py
testdata/adder/: Cargo.toml
testdata/adder/meta/: Cargo.toml
testdata/expected/: adder-1.2.3.source.json  adder.wat  empty-4.5.6.source.json  empty.wat
testdata/input/adder/meta/: Cargo.toml
testdata/input/adder/wasm/: Cargo.toml
testdata/input/empty/: .gitignore  Cargo.toml
testdata/input/empty/meta/: Cargo.toml
testdata/input/empty/wasm/: Cargo.toml
testdata/input/hello/bar/: Cargo.toml  main.rs  multiversx.json
testdata/input/hello/foo/: Cargo.toml  main.rs  multiversx.json
tests/: reproduce_previous_builds.py
