[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "multiversx-build-contract-rust"
version = "4.0.0"
authors = [
  { name="MultiversX" },
]
description = "MultiversX: utility package for building Rust contracts (reproducible builds)."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
exclude = [
  "testdata/**"
]

[project.urls]
"Homepage" = "https://github.com/ElrondNetwork/elrond-sdk-images-build-contract-rust"
