[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "multiversx-sdk-rust-contract-builder"
version = "4.1.0"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "MultiversX: utility package for building Rust contracts (reproducible builds)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
exclude = [
  "testdata/**"
]

[project.urls]
"Homepage" = "https://github.com/multiversx/mx-sdk-build-contract"
